clean up #1 for good by hiding the scale control durring zoom

--- a/docs/style.css
+++ b/docs/style.css
@@ -24,7 +24,7 @@ body {
 
 /* This is the circle that shows the claimable radius. All the parcels are inside this circle. */
 .gold-disk-circle {
-  fill: #ff9412 ;  /* Rich golden orange - default bright version */
+  fill: #af8149 ;  /* Rich golden orange - default bright version */
   stroke: none;
 }
 
@@ -32,6 +32,12 @@ body {
   fill: #f3c21f;  /* Brighter orange - toned down version */
   stroke: none;
 }
+
+.gold-disk-circle-cwt {
+  fill: #ff9412;  /* Brighter orange - toned down version */
+  stroke: none;
+}
+
 
 /* optional grid lines */
 
