I could not figure out how to make the CWT SVG logo not hot when hidden, so now just make it not clickable at all
closes #20

--- a/docs/style.css
+++ b/docs/style.css
@@ -129,6 +129,7 @@ body {
   color: #ffffff; /* White link text */
   text-decoration: underline;
   pointer-events: auto; /* Links should be clickable */
+  display: inline; /* Ensure links only cover text */
 }
 
 #banner a:hover {
